#1972 Issue : Bollywood Text getting overflow

--- a/res/mobile_main_page.css
+++ b/res/mobile_main_page.css
@@ -95,6 +95,7 @@ h2 {
     font-weight: bold;
     transition: all 0.3s;
     transform: scale(1);
+    overflow: auto;
 }
 
 /* .item:hover figcaption {
